Added initial project plan

--- a/config.json
+++ b/config.json
@@ -92,3 +92,4 @@ Temporary commit content 581
 Temporary commit content 632
 Temporary commit content 677
 Temporary commit content 703
+Temporary commit content 722
