Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -195,3 +195,4 @@ Temporary commit content 1720
 Temporary commit content 1724
 Temporary commit content 1731
 Temporary commit content 1762
+Temporary commit content 1763
