--- a/config.json
+++ b/config.json
@@ -41,3 +41,4 @@ Temporary commit content 246
 Temporary commit content 250
 Temporary commit content 287
 Temporary commit content 296
+Temporary commit content 298
