Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -93,3 +93,4 @@ Temporary commit content 632
 Temporary commit content 677
 Temporary commit content 703
 Temporary commit content 722
+Temporary commit content 732
