--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,4 @@ Temporary commit content 242
 Temporary commit content 261
 Temporary commit content 267
 Temporary commit content 289
+Temporary commit content 296
