Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -144,3 +144,4 @@ Temporary commit content 1382
 Temporary commit content 1404
 Temporary commit content 1425
 Temporary commit content 1463
+Temporary commit content 1464
