Fixed typos in documentation

--- a/config.json
+++ b/config.json
@@ -67,3 +67,4 @@ Temporary commit content 294
 Temporary commit content 295
 Temporary commit content 310
 Temporary commit content 332
+Temporary commit content 334
