Refactored code for better readability

--- a/config.json
+++ b/config.json
@@ -69,3 +69,4 @@ Temporary commit content 310
 Temporary commit content 332
 Temporary commit content 334
 Temporary commit content 361
+Temporary commit content 380
