Added validation for user input

--- a/config.json
+++ b/config.json
@@ -28,3 +28,4 @@ Temporary commit content 80
 Temporary commit content 109
 Temporary commit content 116
 Temporary commit content 134
+Temporary commit content 152
