Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -196,3 +196,4 @@ Temporary commit content 1724
 Temporary commit content 1731
 Temporary commit content 1762
 Temporary commit content 1763
+Temporary commit content 1772
