Fixed typos in documentation

--- a/config.json
+++ b/config.json
@@ -49,3 +49,4 @@ Temporary commit content 50
 Temporary commit content 86
 Temporary commit content 109
 Temporary commit content 117
+Temporary commit content 122
