Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -199,3 +199,4 @@ Temporary commit content 1763
 Temporary commit content 1772
 Temporary commit content 1782
 Temporary commit content 1789
+Temporary commit content 1790
