Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -171,3 +171,4 @@ Temporary commit content 1519
 Temporary commit content 1521
 Temporary commit content 1524
 Temporary commit content 1529
+Temporary commit content 1535
