Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -135,3 +135,4 @@ Temporary commit content 1201
 Temporary commit content 1216
 Temporary commit content 1267
 Temporary commit content 1275
+Temporary commit content 1291
