Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -77,3 +77,4 @@ Temporary commit content 378
 Temporary commit content 386
 Temporary commit content 397
 Temporary commit content 400
+Temporary commit content 421
