Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -197,3 +197,4 @@ Temporary commit content 1731
 Temporary commit content 1762
 Temporary commit content 1763
 Temporary commit content 1772
+Temporary commit content 1782
