Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -81,3 +81,4 @@ Temporary commit content 421
 Temporary commit content 442
 Temporary commit content 479
 Temporary commit content 481
+Temporary commit content 490
