--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ Temporary commit content 96
 Temporary commit content 106
 Temporary commit content 110
 Temporary commit content 127
+Temporary commit content 143
