Optimized database queries

--- a/config.json
+++ b/config.json
@@ -111,3 +111,4 @@ Temporary commit content 861
 Temporary commit content 890
 Temporary commit content 906
 Temporary commit content 907
+Temporary commit content 934
