Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -165,3 +165,4 @@ Temporary commit content 1454
 Temporary commit content 1498
 Temporary commit content 1500
 Temporary commit content 1504
+Temporary commit content 1508
