Added validation for user input

--- a/config.json
+++ b/config.json
@@ -101,3 +101,4 @@ Temporary commit content 776
 Temporary commit content 796
 Temporary commit content 823
 Temporary commit content 826
+Temporary commit content 828
