Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -177,3 +177,4 @@ Temporary commit content 1917
 Temporary commit content 1920
 Temporary commit content 1934
 Temporary commit content 1936
+Temporary commit content 1937
