Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -139,3 +139,4 @@ Temporary commit content 1160
 Temporary commit content 1176
 Temporary commit content 1196
 Temporary commit content 1207
+Temporary commit content 1235
