Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -119,3 +119,4 @@ Temporary commit content 885
 Temporary commit content 913
 Temporary commit content 937
 Temporary commit content 951
+Temporary commit content 954
