Refactored code for better readability

--- a/config.json
+++ b/config.json
@@ -165,3 +165,4 @@ Temporary commit content 1727
 Temporary commit content 1760
 Temporary commit content 1784
 Temporary commit content 1802
+Temporary commit content 1831
