--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ Temporary commit content 57
 Temporary commit content 88
 Temporary commit content 94
 Temporary commit content 96
+Temporary commit content 106
