Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -180,3 +180,4 @@ Temporary commit content 1595
 Temporary commit content 1598
 Temporary commit content 1617
 Temporary commit content 1619
+Temporary commit content 1627
