--- a/requirements.txt
+++ b/requirements.txt
@@ -135,3 +135,4 @@ Temporary commit content 1089
 Temporary commit content 1130
 Temporary commit content 1145
 Temporary commit content 1150
+Temporary commit content 1160
