Updated project documentation

--- a/config.json
+++ b/config.json
@@ -112,3 +112,4 @@ Temporary commit content 890
 Temporary commit content 906
 Temporary commit content 907
 Temporary commit content 934
+Temporary commit content 947
