Added initial project plan

--- a/config.json
+++ b/config.json
@@ -162,3 +162,4 @@ Temporary commit content 1666
 Temporary commit content 1700
 Temporary commit content 1715
 Temporary commit content 1727
+Temporary commit content 1760
