Added initial project plan

--- a/config.json
+++ b/config.json
@@ -60,3 +60,4 @@ Temporary commit content 243
 Temporary commit content 244
 Temporary commit content 248
 Temporary commit content 263
+Temporary commit content 268
