Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -59,3 +59,4 @@ Temporary commit content 138
 Temporary commit content 140
 Temporary commit content 167
 Temporary commit content 176
+Temporary commit content 186
