Added initial project plan

--- a/config.json
+++ b/config.json
@@ -89,3 +89,4 @@ Temporary commit content 546
 Temporary commit content 562
 Temporary commit content 567
 Temporary commit content 581
+Temporary commit content 632
