Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -168,3 +168,4 @@ Temporary commit content 1504
 Temporary commit content 1508
 Temporary commit content 1509
 Temporary commit content 1519
+Temporary commit content 1521
