Optimized database queries

--- a/config.json
+++ b/config.json
@@ -72,3 +72,4 @@ Temporary commit content 361
 Temporary commit content 380
 Temporary commit content 390
 Temporary commit content 394
+Temporary commit content 403
