Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -45,3 +45,4 @@ Temporary commit content 278
 Temporary commit content 286
 Temporary commit content 9
 Temporary commit content 15
+Temporary commit content 29
