Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -80,3 +80,4 @@ Temporary commit content 400
 Temporary commit content 421
 Temporary commit content 442
 Temporary commit content 479
+Temporary commit content 481
