--- a/config.json
+++ b/config.json
@@ -90,3 +90,4 @@ Temporary commit content 562
 Temporary commit content 567
 Temporary commit content 581
 Temporary commit content 632
+Temporary commit content 677
