Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -176,3 +176,4 @@ Temporary commit content 1541
 Temporary commit content 1563
 Temporary commit content 1569
 Temporary commit content 1573
+Temporary commit content 1595
