Updated README with new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -117,3 +117,4 @@ Temporary commit content 870
 Temporary commit content 882
 Temporary commit content 885
 Temporary commit content 913
+Temporary commit content 937
