Fixed typos in documentation

--- a/config.json
+++ b/config.json
@@ -136,3 +136,4 @@ Temporary commit content 1216
 Temporary commit content 1267
 Temporary commit content 1275
 Temporary commit content 1291
+Temporary commit content 1307
