Fixed typos in documentation

--- a/config.json
+++ b/config.json
@@ -51,3 +51,4 @@ Temporary commit content 109
 Temporary commit content 117
 Temporary commit content 122
 Temporary commit content 169
+Temporary commit content 172
