Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -56,3 +56,4 @@ Temporary commit content 101
 Temporary commit content 126
 Temporary commit content 131
 Temporary commit content 138
+Temporary commit content 140
