Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -179,3 +179,4 @@ Temporary commit content 1573
 Temporary commit content 1595
 Temporary commit content 1598
 Temporary commit content 1617
+Temporary commit content 1619
