Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -161,3 +161,4 @@ Temporary commit content 1420
 Temporary commit content 1428
 Temporary commit content 1431
 Temporary commit content 1436
+Temporary commit content 1454
