Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -198,3 +198,4 @@ Temporary commit content 1762
 Temporary commit content 1763
 Temporary commit content 1772
 Temporary commit content 1782
+Temporary commit content 1789
