Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -146,3 +146,4 @@ Temporary commit content 1425
 Temporary commit content 1463
 Temporary commit content 1464
 Temporary commit content 1470
+Temporary commit content 1472
