Refactored code for better readability

--- a/config.json
+++ b/config.json
@@ -166,3 +166,4 @@ Temporary commit content 1760
 Temporary commit content 1784
 Temporary commit content 1802
 Temporary commit content 1831
+Temporary commit content 1842
