Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -128,3 +128,4 @@ Temporary commit content 1077
 Temporary commit content 1080
 Temporary commit content 1086
 Temporary commit content 1100
+Temporary commit content 1106
