Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -194,3 +194,4 @@ Temporary commit content 1714
 Temporary commit content 1720
 Temporary commit content 1724
 Temporary commit content 1731
+Temporary commit content 1762
