--- a/config.json
+++ b/config.json
@@ -129,3 +129,4 @@ Temporary commit content 1080
 Temporary commit content 1086
 Temporary commit content 1100
 Temporary commit content 1106
+Temporary commit content 1152
