Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -168,3 +168,4 @@ Temporary commit content 1802
 Temporary commit content 1831
 Temporary commit content 1842
 Temporary commit content 1855
+Temporary commit content 1869
