Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -74,3 +74,4 @@ Temporary commit content 333
 Temporary commit content 370
 Temporary commit content 375
 Temporary commit content 378
+Temporary commit content 386
