Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -91,3 +91,4 @@ Temporary commit content 527
 Temporary commit content 533
 Temporary commit content 536
 Temporary commit content 545
+Temporary commit content 548
