Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -145,3 +145,4 @@ Temporary commit content 1256
 Temporary commit content 1257
 Temporary commit content 1266
 Temporary commit content 1277
+Temporary commit content 1322
