Fixed typos in documentation

--- a/config.json
+++ b/config.json
@@ -44,3 +44,4 @@ Temporary commit content 296
 Temporary commit content 298
 Temporary commit content 299
 Temporary commit content 11
+Temporary commit content 46
