Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -200,3 +200,4 @@ Temporary commit content 1772
 Temporary commit content 1782
 Temporary commit content 1789
 Temporary commit content 1790
+Temporary commit content 1804
