Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -90,3 +90,4 @@ Temporary commit content 516
 Temporary commit content 527
 Temporary commit content 533
 Temporary commit content 536
+Temporary commit content 545
