Updated README with new features

--- a/config.json
+++ b/config.json
@@ -113,3 +113,4 @@ Temporary commit content 906
 Temporary commit content 907
 Temporary commit content 934
 Temporary commit content 947
+Temporary commit content 952
