Added initial project plan

--- a/config.json
+++ b/config.json
@@ -141,3 +141,4 @@ Temporary commit content 1309
 Temporary commit content 1312
 Temporary commit content 1379
 Temporary commit content 1382
+Temporary commit content 1404
