Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -124,3 +124,4 @@ Temporary commit content 994
 Temporary commit content 1012
 Temporary commit content 1015
 Temporary commit content 1022
+Temporary commit content 1032
