--- a/requirements.txt
+++ b/requirements.txt
@@ -212,3 +212,4 @@ Temporary commit content 1908
 Temporary commit content 1919
 Temporary commit content 1925
 Temporary commit content 1933
+Temporary commit content 1966
