Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -175,3 +175,4 @@ Temporary commit content 1535
 Temporary commit content 1541
 Temporary commit content 1563
 Temporary commit content 1569
+Temporary commit content 1573
