Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -106,3 +106,4 @@ Temporary commit content 709
 Temporary commit content 712
 Temporary commit content 724
 Temporary commit content 733
+Temporary commit content 748
