Updated README with new features

--- a/config.json
+++ b/config.json
@@ -174,3 +174,4 @@ Temporary commit content 1873
 Temporary commit content 1875
 Temporary commit content 1895
 Temporary commit content 1917
+Temporary commit content 1920
