Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -66,3 +66,4 @@ Temporary commit content 226
 Temporary commit content 228
 Temporary commit content 264
 Temporary commit content 273
+Temporary commit content 289
