Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -30,3 +30,4 @@ Temporary commit content 116
 Temporary commit content 134
 Temporary commit content 152
 Temporary commit content 167
+Temporary commit content 184
