Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -133,3 +133,4 @@ Temporary commit content 1152
 Temporary commit content 1185
 Temporary commit content 1201
 Temporary commit content 1216
+Temporary commit content 1267
