Added initial project plan

--- a/config.json
+++ b/config.json
@@ -159,3 +159,4 @@ Temporary commit content 1647
 Temporary commit content 1649
 Temporary commit content 1652
 Temporary commit content 1666
+Temporary commit content 1700
