Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -137,3 +137,4 @@ Temporary commit content 1145
 Temporary commit content 1150
 Temporary commit content 1160
 Temporary commit content 1176
+Temporary commit content 1196
