Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -202,3 +202,4 @@ Temporary commit content 1789
 Temporary commit content 1790
 Temporary commit content 1804
 Temporary commit content 1814
+Temporary commit content 1816
