Optimized database queries

--- a/config.json
+++ b/config.json
@@ -75,3 +75,4 @@ Temporary commit content 394
 Temporary commit content 403
 Temporary commit content 405
 Temporary commit content 412
+Temporary commit content 418
