Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -109,3 +109,4 @@ Temporary commit content 733
 Temporary commit content 748
 Temporary commit content 771
 Temporary commit content 784
+Temporary commit content 829
