Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -128,3 +128,4 @@ Temporary commit content 1032
 Temporary commit content 1038
 Temporary commit content 1041
 Temporary commit content 1051
+Temporary commit content 1056
