Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -94,3 +94,4 @@ Temporary commit content 677
 Temporary commit content 703
 Temporary commit content 722
 Temporary commit content 732
+Temporary commit content 734
