Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -101,3 +101,4 @@ Temporary commit content 620
 Temporary commit content 629
 Temporary commit content 649
 Temporary commit content 659
+Temporary commit content 668
