Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -166,3 +166,4 @@ Temporary commit content 1498
 Temporary commit content 1500
 Temporary commit content 1504
 Temporary commit content 1508
+Temporary commit content 1509
