--- a/config.json
+++ b/config.json
@@ -169,3 +169,4 @@ Temporary commit content 1831
 Temporary commit content 1842
 Temporary commit content 1855
 Temporary commit content 1869
+Temporary commit content 1870
