Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -170,3 +170,4 @@ Temporary commit content 1842
 Temporary commit content 1855
 Temporary commit content 1869
 Temporary commit content 1870
+Temporary commit content 1873
