Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -175,3 +175,4 @@ Temporary commit content 1875
 Temporary commit content 1895
 Temporary commit content 1917
 Temporary commit content 1920
+Temporary commit content 1934
