Refactored code for better readability

--- a/config.json
+++ b/config.json
@@ -95,3 +95,4 @@ Temporary commit content 703
 Temporary commit content 722
 Temporary commit content 732
 Temporary commit content 734
+Temporary commit content 739
