Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -114,3 +114,4 @@ Temporary commit content 830
 Temporary commit content 833
 Temporary commit content 846
 Temporary commit content 870
+Temporary commit content 882
