Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -189,3 +189,4 @@ Temporary commit content 1680
 Temporary commit content 1686
 Temporary commit content 1691
 Temporary commit content 1692
+Temporary commit content 1703
