Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -182,3 +182,4 @@ Temporary commit content 1617
 Temporary commit content 1619
 Temporary commit content 1627
 Temporary commit content 1633
+Temporary commit content 1634
