Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -76,3 +76,4 @@ Temporary commit content 375
 Temporary commit content 378
 Temporary commit content 386
 Temporary commit content 397
+Temporary commit content 400
