Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -153,3 +153,4 @@ Temporary commit content 1481
 Temporary commit content 1489
 Temporary commit content 1574
 Temporary commit content 1586
+Temporary commit content 1594
