Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -100,3 +100,4 @@ Temporary commit content 742
 Temporary commit content 776
 Temporary commit content 796
 Temporary commit content 823
+Temporary commit content 826
