Optimized database queries

--- a/config.json
+++ b/config.json
@@ -78,3 +78,4 @@ Temporary commit content 412
 Temporary commit content 418
 Temporary commit content 425
 Temporary commit content 429
+Temporary commit content 453
