Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -84,3 +84,4 @@ Temporary commit content 485
 Temporary commit content 496
 Temporary commit content 497
 Temporary commit content 499
+Temporary commit content 543
