Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -154,3 +154,4 @@ Temporary commit content 1373
 Temporary commit content 1375
 Temporary commit content 1388
 Temporary commit content 1392
+Temporary commit content 1393
