Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -183,3 +183,4 @@ Temporary commit content 1619
 Temporary commit content 1627
 Temporary commit content 1633
 Temporary commit content 1634
+Temporary commit content 1635
