Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -89,3 +89,4 @@ Temporary commit content 515
 Temporary commit content 516
 Temporary commit content 527
 Temporary commit content 533
+Temporary commit content 536
