Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -146,3 +146,4 @@ Temporary commit content 1257
 Temporary commit content 1266
 Temporary commit content 1277
 Temporary commit content 1322
+Temporary commit content 1324
