Updated README with new features

--- a/config.json
+++ b/config.json
@@ -114,3 +114,4 @@ Temporary commit content 907
 Temporary commit content 934
 Temporary commit content 947
 Temporary commit content 952
+Temporary commit content 961
