Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -126,3 +126,4 @@ Temporary commit content 1055
 Temporary commit content 1059
 Temporary commit content 1077
 Temporary commit content 1080
+Temporary commit content 1086
