--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ Temporary commit content 46
 Temporary commit content 57
 Temporary commit content 88
 Temporary commit content 94
+Temporary commit content 96
