Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -123,3 +123,4 @@ Temporary commit content 954
 Temporary commit content 994
 Temporary commit content 1012
 Temporary commit content 1015
+Temporary commit content 1022
