Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -156,3 +156,4 @@ Temporary commit content 1388
 Temporary commit content 1392
 Temporary commit content 1393
 Temporary commit content 1394
+Temporary commit content 1411
