Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -155,3 +155,4 @@ Temporary commit content 1375
 Temporary commit content 1388
 Temporary commit content 1392
 Temporary commit content 1393
+Temporary commit content 1394
