Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -115,3 +115,4 @@ Temporary commit content 934
 Temporary commit content 947
 Temporary commit content 952
 Temporary commit content 961
+Temporary commit content 976
