Updated README with new features

--- a/config.json
+++ b/config.json
@@ -149,3 +149,4 @@ Temporary commit content 1470
 Temporary commit content 1472
 Temporary commit content 1476
 Temporary commit content 1477
+Temporary commit content 1481
