Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -138,3 +138,4 @@ Temporary commit content 1150
 Temporary commit content 1160
 Temporary commit content 1176
 Temporary commit content 1196
+Temporary commit content 1207
