Added validation for user input

--- a/config.json
+++ b/config.json
@@ -163,3 +163,4 @@ Temporary commit content 1700
 Temporary commit content 1715
 Temporary commit content 1727
 Temporary commit content 1760
+Temporary commit content 1784
