Fixed typos in documentation

--- a/config.json
+++ b/config.json
@@ -164,3 +164,4 @@ Temporary commit content 1715
 Temporary commit content 1727
 Temporary commit content 1760
 Temporary commit content 1784
+Temporary commit content 1802
