Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -98,3 +98,4 @@ Temporary commit content 588
 Temporary commit content 593
 Temporary commit content 597
 Temporary commit content 620
+Temporary commit content 629
