Added initial project plan

--- a/config.json
+++ b/config.json
@@ -82,3 +82,4 @@ Temporary commit content 453
 Temporary commit content 463
 Temporary commit content 485
 Temporary commit content 496
+Temporary commit content 497
