Refactored code for better readability

--- a/config.json
+++ b/config.json
@@ -160,3 +160,4 @@ Temporary commit content 1649
 Temporary commit content 1652
 Temporary commit content 1666
 Temporary commit content 1700
+Temporary commit content 1715
