Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -86,3 +86,4 @@ Temporary commit content 495
 Temporary commit content 504
 Temporary commit content 511
 Temporary commit content 515
+Temporary commit content 516
