Fixed typos in documentation

--- a/config.json
+++ b/config.json
@@ -71,3 +71,4 @@ Temporary commit content 334
 Temporary commit content 361
 Temporary commit content 380
 Temporary commit content 390
+Temporary commit content 394
