Optimized database queries

--- a/config.json
+++ b/config.json
@@ -27,3 +27,4 @@ Temporary commit content 39
 Temporary commit content 80
 Temporary commit content 109
 Temporary commit content 116
+Temporary commit content 134
