Optimized database queries

--- a/config.json
+++ b/config.json
@@ -45,3 +45,4 @@ Temporary commit content 298
 Temporary commit content 299
 Temporary commit content 11
 Temporary commit content 46
+Temporary commit content 50
