--- a/config.json
+++ b/config.json
@@ -40,3 +40,4 @@ Temporary commit content 234
 Temporary commit content 246
 Temporary commit content 250
 Temporary commit content 287
+Temporary commit content 296
