Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -184,3 +184,4 @@ Temporary commit content 1627
 Temporary commit content 1633
 Temporary commit content 1634
 Temporary commit content 1635
+Temporary commit content 1656
