Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -125,3 +125,4 @@ Temporary commit content 1012
 Temporary commit content 1015
 Temporary commit content 1022
 Temporary commit content 1032
+Temporary commit content 1038
