Fixed typos in documentation

--- a/config.json
+++ b/config.json
@@ -110,3 +110,4 @@ Temporary commit content 852
 Temporary commit content 861
 Temporary commit content 890
 Temporary commit content 906
+Temporary commit content 907
