Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -137,3 +137,4 @@ Temporary commit content 1267
 Temporary commit content 1275
 Temporary commit content 1291
 Temporary commit content 1307
+Temporary commit content 1309
