Refactored code for better readability

--- a/config.json
+++ b/config.json
@@ -173,3 +173,4 @@ Temporary commit content 1870
 Temporary commit content 1873
 Temporary commit content 1875
 Temporary commit content 1895
+Temporary commit content 1917
