Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -157,3 +157,4 @@ Temporary commit content 1392
 Temporary commit content 1393
 Temporary commit content 1394
 Temporary commit content 1411
+Temporary commit content 1420
