Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -52,3 +52,4 @@ Temporary commit content 117
 Temporary commit content 122
 Temporary commit content 169
 Temporary commit content 172
+Temporary commit content 204
