Added initial project plan

--- a/config.json
+++ b/config.json
@@ -98,3 +98,4 @@ Temporary commit content 734
 Temporary commit content 739
 Temporary commit content 742
 Temporary commit content 776
+Temporary commit content 796
