Optimized database queries

--- a/config.json
+++ b/config.json
@@ -171,3 +171,4 @@ Temporary commit content 1855
 Temporary commit content 1869
 Temporary commit content 1870
 Temporary commit content 1873
+Temporary commit content 1875
