Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -144,3 +144,4 @@ Temporary commit content 1254
 Temporary commit content 1256
 Temporary commit content 1257
 Temporary commit content 1266
+Temporary commit content 1277
