Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -188,3 +188,4 @@ Temporary commit content 1656
 Temporary commit content 1680
 Temporary commit content 1686
 Temporary commit content 1691
+Temporary commit content 1692
