Updated README with new features

--- a/config.json
+++ b/config.json
@@ -181,3 +181,4 @@ Temporary commit content 1937
 Temporary commit content 1962
 Temporary commit content 1983
 Temporary commit content 1993
+Temporary commit content 1996
