Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -158,3 +158,4 @@ Temporary commit content 1393
 Temporary commit content 1394
 Temporary commit content 1411
 Temporary commit content 1420
+Temporary commit content 1428
