Updated README with new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -148,3 +148,4 @@ Temporary commit content 1277
 Temporary commit content 1322
 Temporary commit content 1324
 Temporary commit content 1332
+Temporary commit content 1351
