Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -72,3 +72,4 @@ Temporary commit content 316
 Temporary commit content 317
 Temporary commit content 333
 Temporary commit content 370
+Temporary commit content 375
