Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -140,3 +140,4 @@ Temporary commit content 1176
 Temporary commit content 1196
 Temporary commit content 1207
 Temporary commit content 1235
+Temporary commit content 1254
