Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -152,3 +152,4 @@ Temporary commit content 1351
 Temporary commit content 1366
 Temporary commit content 1373
 Temporary commit content 1375
+Temporary commit content 1388
