--- a/config.json
+++ b/config.json
@@ -123,3 +123,4 @@ Temporary commit content 1027
 Temporary commit content 1031
 Temporary commit content 1036
 Temporary commit content 1055
+Temporary commit content 1059
