--- a/config.json
+++ b/config.json
@@ -109,3 +109,4 @@ Temporary commit content 847
 Temporary commit content 852
 Temporary commit content 861
 Temporary commit content 890
+Temporary commit content 906
