Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -65,3 +65,4 @@ Temporary commit content 222
 Temporary commit content 226
 Temporary commit content 228
 Temporary commit content 264
+Temporary commit content 273
