Added validation for user input

--- a/config.json
+++ b/config.json
@@ -180,3 +180,4 @@ Temporary commit content 1936
 Temporary commit content 1937
 Temporary commit content 1962
 Temporary commit content 1983
+Temporary commit content 1993
