Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -125,3 +125,4 @@ Temporary commit content 1036
 Temporary commit content 1055
 Temporary commit content 1059
 Temporary commit content 1077
+Temporary commit content 1080
