Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -191,3 +191,4 @@ Temporary commit content 1691
 Temporary commit content 1692
 Temporary commit content 1703
 Temporary commit content 1714
+Temporary commit content 1720
