Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -190,3 +190,4 @@ Temporary commit content 1686
 Temporary commit content 1691
 Temporary commit content 1692
 Temporary commit content 1703
+Temporary commit content 1714
