Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -186,3 +186,4 @@ Temporary commit content 1634
 Temporary commit content 1635
 Temporary commit content 1656
 Temporary commit content 1680
+Temporary commit content 1686
