Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -147,3 +147,4 @@ Temporary commit content 1266
 Temporary commit content 1277
 Temporary commit content 1322
 Temporary commit content 1324
+Temporary commit content 1332
