Optimized database queries

--- a/config.json
+++ b/config.json
@@ -79,3 +79,4 @@ Temporary commit content 418
 Temporary commit content 425
 Temporary commit content 429
 Temporary commit content 453
+Temporary commit content 463
