Updated README with new features

--- a/config.json
+++ b/config.json
@@ -172,3 +172,4 @@ Temporary commit content 1869
 Temporary commit content 1870
 Temporary commit content 1873
 Temporary commit content 1875
+Temporary commit content 1895
