Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -129,3 +129,4 @@ Temporary commit content 1038
 Temporary commit content 1041
 Temporary commit content 1051
 Temporary commit content 1056
+Temporary commit content 1072
