Added initial project plan

--- a/config.json
+++ b/config.json
@@ -66,3 +66,4 @@ Temporary commit content 293
 Temporary commit content 294
 Temporary commit content 295
 Temporary commit content 310
+Temporary commit content 332
