Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -83,3 +83,4 @@ Temporary commit content 463
 Temporary commit content 485
 Temporary commit content 496
 Temporary commit content 497
+Temporary commit content 499
