Updated README with new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -141,3 +141,4 @@ Temporary commit content 1196
 Temporary commit content 1207
 Temporary commit content 1235
 Temporary commit content 1254
+Temporary commit content 1256
