Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -201,3 +201,4 @@ Temporary commit content 1782
 Temporary commit content 1789
 Temporary commit content 1790
 Temporary commit content 1804
+Temporary commit content 1814
