Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -134,3 +134,4 @@ Temporary commit content 1085
 Temporary commit content 1089
 Temporary commit content 1130
 Temporary commit content 1145
+Temporary commit content 1150
