Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -139,3 +139,4 @@ Temporary commit content 1291
 Temporary commit content 1307
 Temporary commit content 1309
 Temporary commit content 1312
+Temporary commit content 1379
