Updated project documentation

--- a/config.json
+++ b/config.json
@@ -55,3 +55,4 @@ Temporary commit content 172
 Temporary commit content 204
 Temporary commit content 208
 Temporary commit content 215
+Temporary commit content 225
