Updated README with new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -177,3 +177,4 @@ Temporary commit content 1563
 Temporary commit content 1569
 Temporary commit content 1573
 Temporary commit content 1595
+Temporary commit content 1598
