Fixed typos in documentation

--- a/config.json
+++ b/config.json
@@ -77,3 +77,4 @@ Temporary commit content 405
 Temporary commit content 412
 Temporary commit content 418
 Temporary commit content 425
+Temporary commit content 429
