Added initial project plan

--- a/config.json
+++ b/config.json
@@ -119,3 +119,4 @@ Temporary commit content 976
 Temporary commit content 977
 Temporary commit content 1004
 Temporary commit content 1026
+Temporary commit content 1027
