Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -107,3 +107,4 @@ Temporary commit content 839
 Temporary commit content 840
 Temporary commit content 847
 Temporary commit content 852
+Temporary commit content 861
