Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -35,3 +35,4 @@ Temporary commit content 187
 Temporary commit content 202
 Temporary commit content 205
 Temporary commit content 221
+Temporary commit content 231
