Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -178,3 +178,4 @@ Temporary commit content 1569
 Temporary commit content 1573
 Temporary commit content 1595
 Temporary commit content 1598
+Temporary commit content 1617
