Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -153,3 +153,4 @@ Temporary commit content 1366
 Temporary commit content 1373
 Temporary commit content 1375
 Temporary commit content 1388
+Temporary commit content 1392
