Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -100,3 +100,4 @@ Temporary commit content 597
 Temporary commit content 620
 Temporary commit content 629
 Temporary commit content 649
+Temporary commit content 659
