--- a/config.json
+++ b/config.json
@@ -118,3 +118,4 @@ Temporary commit content 961
 Temporary commit content 976
 Temporary commit content 977
 Temporary commit content 1004
+Temporary commit content 1026
