--- a/requirements.txt
+++ b/requirements.txt
@@ -192,3 +192,4 @@ Temporary commit content 1692
 Temporary commit content 1703
 Temporary commit content 1714
 Temporary commit content 1720
+Temporary commit content 1724
