Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -148,3 +148,4 @@ Temporary commit content 1464
 Temporary commit content 1470
 Temporary commit content 1472
 Temporary commit content 1476
+Temporary commit content 1477
