Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -122,3 +122,4 @@ Temporary commit content 1026
 Temporary commit content 1027
 Temporary commit content 1031
 Temporary commit content 1036
+Temporary commit content 1055
