Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -97,3 +97,4 @@ Temporary commit content 582
 Temporary commit content 588
 Temporary commit content 593
 Temporary commit content 597
+Temporary commit content 620
