Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -82,3 +82,4 @@ Temporary commit content 442
 Temporary commit content 479
 Temporary commit content 481
 Temporary commit content 490
+Temporary commit content 495
