Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -121,3 +121,4 @@ Temporary commit content 1004
 Temporary commit content 1026
 Temporary commit content 1027
 Temporary commit content 1031
+Temporary commit content 1036
