Added validation for user input

--- a/config.json
+++ b/config.json
@@ -154,3 +154,4 @@ Temporary commit content 1489
 Temporary commit content 1574
 Temporary commit content 1586
 Temporary commit content 1594
+Temporary commit content 1638
