Added validation for user input

--- a/config.json
+++ b/config.json
@@ -167,3 +167,4 @@ Temporary commit content 1784
 Temporary commit content 1802
 Temporary commit content 1831
 Temporary commit content 1842
+Temporary commit content 1855
