Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,4 @@ Temporary commit content 207
 Temporary commit content 235
 Temporary commit content 270
 Temporary commit content 274
+Temporary commit content 277
