Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -104,3 +104,4 @@ Temporary commit content 659
 Temporary commit content 668
 Temporary commit content 709
 Temporary commit content 712
+Temporary commit content 724
