Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -120,3 +120,4 @@ Temporary commit content 977
 Temporary commit content 1004
 Temporary commit content 1026
 Temporary commit content 1027
+Temporary commit content 1031
