Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -78,3 +78,4 @@ Temporary commit content 386
 Temporary commit content 397
 Temporary commit content 400
 Temporary commit content 421
+Temporary commit content 442
