Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -162,3 +162,4 @@ Temporary commit content 1428
 Temporary commit content 1431
 Temporary commit content 1436
 Temporary commit content 1454
+Temporary commit content 1498
