Updated README with new features

--- a/config.json
+++ b/config.json
@@ -68,3 +68,4 @@ Temporary commit content 295
 Temporary commit content 310
 Temporary commit content 332
 Temporary commit content 334
+Temporary commit content 361
