Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -76,3 +76,4 @@ Temporary commit content 403
 Temporary commit content 405
 Temporary commit content 412
 Temporary commit content 418
+Temporary commit content 425
