Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -103,3 +103,4 @@ Temporary commit content 649
 Temporary commit content 659
 Temporary commit content 668
 Temporary commit content 709
+Temporary commit content 712
