Updated README with new features

--- a/config.json
+++ b/config.json
@@ -86,3 +86,4 @@ Temporary commit content 497
 Temporary commit content 499
 Temporary commit content 543
 Temporary commit content 546
+Temporary commit content 562
